--- a/src/mask/index.css
+++ b/src/mask/index.css
@@ -1,12 +1,11 @@
-div.mask {
-  width: 400px;
-  height: 300px;
+.mask {
+  opacity: 0.8;
+  width: 200px;
+  height: 100px;
   font-size: 50px;
-  line-height: 3em;
   box-sizing: border-box;
   text-align: center;
   color: white;
-  border-radius: 10px;
   background-image: linear-gradient(
     180deg,
     hsl(0, 100%, 30%),
@@ -14,8 +13,8 @@ div.mask {
   );
 }
 
-div.mask {
-  --top-width: 80;
-  --top-height: 20;
-  background-image: paint(mask);
+.mask {
+  --squircle-radius: var(--base-radius);
+  --squircle-smooth: 1;
+  -webkit-mask: paint(mask);
 }
