--- a/src/sections/BenefitsSection/style.module.scss
+++ b/src/sections/BenefitsSection/style.module.scss
@@ -10,7 +10,11 @@
   flex-wrap: wrap;
   width: 100%;
   margin: 0 auto;
-  padding: var(--padding-xl) var(--padding-l);
+  padding: var(--vertical-paddings) var(--horizontal-paddings);
+  @media only screen and (max-width: 620px) {
+    margin-top: var(--padding-xs);
+    margin-bottom: var(--padding-xs);
+  }
 }
 
 .card {
@@ -24,6 +28,10 @@
   justify-content: space-between;
   flex-direction: column;
   margin: var(--padding-xs);
+  @media only screen and (max-width: 620px) {
+    padding: 24px;
+    margin: var(--padding-xxs);
+  }
 }
 
 .svg {
@@ -37,4 +45,7 @@
   color: var(--dark-clr);
   margin-bottom: 0;
   margin-top: 32px;
+  @media only screen and (max-width: 620px) {
+    font-size: 18px;
+  }
 }
