--- a/src/sections/CSSSection/style.module.scss
+++ b/src/sections/CSSSection/style.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins";
+
 .wrapWidth {
   border-top: 2px solid var(--dark-clr);
   border-bottom: 2px solid var(--dark-clr);
@@ -9,24 +11,29 @@
   display: flex;
   width: 100%;
   margin: 0 auto;
+  @media only screen and (max-width: 1100px) {
+    flex-direction: column;
+  }
 }
 
 .title {
-  width: 40%;
-  min-width: 600px;
+  width: 50%;
+  max-width: 600px;
   border-right: 2px solid var(--dark-clr);
-  padding: var(--padding-xl) var(--padding-l);
+  padding: var(--vertical-paddings) var(--horizontal-paddings);
+  @media only screen and (max-width: 1100px) {
+    width: 100%;
+    border-right: none;
+    padding-bottom: 0;
+  }
   h2 {
-    font-family: "Druck";
-    color: var(--dark-clr);
-    text-transform: uppercase;
-    font-size: 46px;
+    @include h2;
   }
 }
 
 .content {
   width: 100%;
-  padding: var(--padding-xl) var(--padding-l);
+  padding: var(--vertical-paddings) var(--horizontal-paddings);
 }
 
 .switcher {
@@ -34,6 +41,9 @@
   display: flex;
   padding: 8px;
   margin-bottom: var(--padding-m);
+  @media only screen and (max-width: 620px) {
+    margin-bottom: var(--padding-s);
+  }
   &:after {
     content: "";
     position: absolute;
@@ -63,6 +73,13 @@
     &:hover {
       text-decoration: underline;
     }
+    @media only screen and (max-width: 1100px) {
+      font-size: 24px;
+    }
+    @media only screen and (max-width: 620px) {
+      padding: 8px;
+      font-size: 16px;
+    }
   }
   &Back {
     position: absolute;
@@ -91,6 +108,7 @@
   display: flex;
   flex-direction: column;
   color: var(--dark-clr);
+  overflow: scroll;
   // border: 2px solid red;
   padding: 40px;
   background: paint(squircle);
@@ -98,11 +116,17 @@
   --squircle-radius: 16px;
   --squircle-outline: 2px;
   --squircle-color: var(--dark-clr);
-  p {
+  @media only screen and (max-width: 620px) {
+    padding: 32px;
+  }
+  code {
     font-family: "Roboto Mono", monospace;
     font-size: 16px;
     margin: 0;
     margin-bottom: var(--padding-xs);
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   span {
     color: rgba(0, 0, 0, 0.3);
