--- a/src/sections/JSSection/style.module.scss
+++ b/src/sections/JSSection/style.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins";
+
 .wrapWidth {
   border-top: 2px solid var(--dark-clr);
   border-bottom: 2px solid var(--dark-clr);
@@ -9,24 +11,31 @@
   display: flex;
   width: 100%;
   margin: 0 auto;
+  @media only screen and (max-width: 1100px) {
+    flex-direction: column;
+  }
 }
 
 .title {
   width: 40%;
-  min-width: 600px;
+  max-width: 600px;
   border-right: 2px solid var(--dark-clr);
-  padding: var(--padding-xl) var(--padding-l);
+  padding: var(--vertical-paddings) var(--horizontal-paddings);
+  @media only screen and (max-width: 1100px) {
+    border-right: none;
+    width: 100%;
+  }
   h2 {
-    font-family: "Druck";
-    color: var(--dark-clr);
-    text-transform: uppercase;
-    font-size: 46px;
+    @include h2;
   }
 }
 
 .content {
   width: 100%;
-  padding: var(--padding-xl) var(--padding-l);
+  padding: var(--vertical-paddings) var(--horizontal-paddings);
+  @media only screen and (max-width: 1100px) {
+    padding-top: 0;
+  }
 }
 
 .CodeExample {
@@ -40,11 +49,18 @@
   --squircle-radius: 16px;
   --squircle-outline: 2px;
   --squircle-color: var(--dark-clr);
-  p {
+  overflow: scroll;
+  @media only screen and (max-width: 620px) {
+    margin-bottom: var(--padding-s);
+  }
+  code {
     font-family: "Roboto Mono", monospace;
     font-size: 16px;
     margin: 0;
     margin-bottom: var(--padding-xs);
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   span {
     color: rgba(0, 0, 0, 0.3);
