--- a/src/sections/HowItWorksSection/style.module.scss
+++ b/src/sections/HowItWorksSection/style.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   width: 100%;
   margin: 0 auto;
-  padding: 0 var(--vertical-paddings);
+  padding: 0 var(--horizontal-paddings);
   align-items: center;
   @media only screen and (max-width: 1100px) {
     flex-direction: column-reverse;
