--- a/src/sections/JSSection/style.module.scss
+++ b/src/sections/JSSection/style.module.scss
@@ -53,6 +53,9 @@
   @media only screen and (max-width: 620px) {
     margin-bottom: var(--padding-s);
   }
+  &::-webkit-scrollbar {
+    display: none;
+  }
   code {
     font-family: "Roboto Mono", monospace;
     font-size: 16px;
