--- a/src/sections/CSSSection/style.module.scss
+++ b/src/sections/CSSSection/style.module.scss
@@ -114,7 +114,7 @@
   --squircle-smooth: 0.8;
   --squircle-radius: 16px;
   --squircle-outline: 2px;
-  --squircle-color: var(--dark-clr);
+  --squircle-fill: var(--dark-clr);
   @media only screen and (max-width: 620px) {
     padding: 32px;
   }
