--- a/src/sections/JSSection/style.module.scss
+++ b/src/sections/JSSection/style.module.scss
@@ -48,7 +48,7 @@
   --squircle-smooth: 0.8;
   --squircle-radius: 16px;
   --squircle-outline: 2px;
-  --squircle-color: var(--dark-clr);
+  --squircle-fill: var(--dark-clr);
   overflow: scroll;
   @media only screen and (max-width: 620px) {
     margin-bottom: var(--padding-s);
